# EAR-harvest-heterogenous-energy-plugin

./: +  .Makefile.swp  .gitignore  .gitignore.swp  1  AUTHORS  CHANGELOG.md  Makefile.bck  Makefile.cop  Makefile.cp  Makefile.exports  Makefile.in  README.md  _loop  configure.ac  doxygen.conf  energy_cpu.c  energy_cpu.h  energy_rapl.c  make.result  oldmodels.c  regenera  regenera.sh  regenera_skl.sh  sim_metrics.csv  test.c  tmpi  tmpi.c
doc/: Makefile
doc/EAR3.1/: EAR3.1.html
doc/html/: MPI__calls__coded_8h.html  MPI__calls__coded_8h_source.html  MPI__interceptF_8c.html  MPI__interceptF_8h.html  MPI__interceptF_8h_source.html  MPI__intercept_8c.html  MPI__intercept_8h.html  MPI__intercept_8h_source.html  MPI__interfaceF_8c.html  MPI__interfaceF_8h.html  MPI__interfaceF_8h_source.html  MPI__interface_8c.html  MPI__interface_8h.html  MPI__interface_8h_source.html  MPI__types_8h.html  MPI__types_8h_source.html  README_8dev_8md.html  README_8islands_8md.html  README_8md.html  annotated.html  app__api_8c.html  app__api_8h.html  app__api_8h_source.html  app__conf__api_8h.html  app__conf__api_8h_source.html  app__server__api_8c.html  app__server__api_8h.html  app__server__api_8h_source.html  application_8c.html  application_8h.html  application_8h_source.html  bandwidth_8c.html  bandwidth_8h.html  bandwidth_8h_source.html  bandwith__monitor_8c.html  batch__insert_8c.html  cache_8c.html  cache_8h.html  cache_8h_source.html  check_8c.html  (+604 more)
doc/latex/: MPI__calls__coded_8h.tex  MPI__interceptF_8c.tex  MPI__interceptF_8h.tex  MPI__intercept_8c.tex  MPI__intercept_8h.tex  MPI__interfaceF_8c.tex  MPI__interfaceF_8h.tex  MPI__interface_8c.tex  MPI__interface_8h.tex  MPI__types_8h.tex  README_8dev_8md.tex  README_8islands_8md.tex  annotated.tex  app__api_8c.tex  app__api_8h.tex  app__conf__api_8h.tex  app__server__api_8c.tex  app__server__api_8h.tex  application_8c.tex  application_8h.tex  bandwidth_8c.tex  bandwidth_8h.tex  bandwith__monitor_8c.tex  batch__insert_8c.tex  cache_8c.tex  cache_8h.tex  check_8c.tex  check_8h.tex  client__api__test_8c.tex  client__signal__test_8c.tex  client__sync__test_8c.tex  cluster__conf_8c.tex  cluster__conf_8h.tex  cluster__conf__read_8c.tex  cluster__conf__verbose_8c.tex  coefficient_8c.tex  coefficient_8h.tex  coefficients__comparison_8c.tex  coefficients__quality__control_8c.tex  coefficients__to__csv_8c.tex  (+368 more)
doc/man/: eacct.1  ear_create_database.1  ear_report.1  ear_report_man.1
etc/: .Makefile.swp  Makefile  README.md  ear-1.0  ear.conf  plugstack.conf
etc/conf/: README.islands.md  README.md  ear.conf  ear.conf.full.in  ear.conf.full.template  ear.conf.full.template.in  ear.conf.full.template.in~29cd487396e2906e1b57abe9a11130c14618855d  ear.conf.in  ear.conf.suggestions  ear.conf.template  ear.conf.template.in
etc/examples/: ear_daemon_exit.sh  ear_daemon_start.sh  ear_env_conf.sh  ear_env_libs.sh  ear_run.sh  example_bt-mz.sh  example_dgemm.sh
etc/module/: ear-1.0.in  ear.in
etc/rpm_no_realloc/: rpmbuild.sh.in
etc/rpm_realloc_configure/: rpmbuild.sh
etc/rpms/: .gitignore  rpmbuild.sh  rpmbuild.sh.in
etc/rpms/configure/: configure  configure.ac
etc/rpms2/: .gitignore  rpmbuild2.sh
etc/rpms2/configure/: configure  configure.ac
etc/rpms3/: rpmbuild.sh
etc/scripts/: README.md
etc/slurm/: ear.conf  ear.conf.in  ear.link  ear.link.in  ear.plugstack.conf  ear.plugstack.conf.in  plugstack.conf  plugstack.conf.in
etc/systemd/: eard.service  eard.service.backu  eard.service.in  eardbd.service.in  eargmd.service.in
kernels/STREAM/: Makefile  stream_mpi  stream_mpi.f
m4/: ax_features.m4  ax_helper_functions.m4  ax_post_opt_features.m4  ax_pre_opt_features.m4  x_ac_backup.m4  x_ac_cpupower.m4  x_ac_cuda.m4  x_ac_find.m4  x_ac_freeipmi.m4  x_ac_gsl.m4  x_ac_mpi.m4  x_ac_mysql.m4  x_ac_opt_features.m4  x_ac_papi.m4  x_ac_pgsql.m4  x_ac_slurm.m4
misc/: ear-1.0
src/: .Makefile.swp  Makefile  Makefile.depend  Makefile.extra  Makefile.pre  README.dev.md  README.md  plugins.h
src/commands/: .depend  Makefile  README.md  eacct  eacct1  ear_acct.c  ear_acct1.c  ear_cleandb.c  ear_control.c  ear_create_database  ear_create_database.c  ear_end_job  ear_end_job.c  ear_energy_over_time.c  ear_get_node_freq.c  ear_gm.c  ear_inc_th.c  ear_last_apps.c  ear_new_job  ear_new_job.c  ear_options_test  ear_options_test.c  ear_red_freq.c  ear_report.c  ear_set_freq.c  ear_set_node_freq.c  ear_set_ondemand  ear_set_ondemand.c  ear_store_database.c  econtrol.c  ereport
src/common/: .depend  Makefile  Makefile.files  README.md  attributes.h  colors.h  config.h  config.h.in  config_dev.h  config_install.h  config_install.h.in  ear_arch_type.c  ear_configuration.c  ear_configuration.h  ear_daemon_client.c  ear_daemon_client.h  ear_daemon_common.h  ear_db_helper.c  ear_db_helper.h  ear_db_type.h  ear_default_values.h  ear_default_values.h.bck  ear_verbose.h  eards_api.h  environment.c  environment.h  environment_common.c  environment_common.h  externs.h  externs_alloc.h  externs_alloc.h.c  file.c  file.h  file_lock.c  file_lock.h  folder.c  folder.h  frequency.c  hardware.c  hardware.h  (+38 more)
src/control/: .depend  .frequency.h.swp  Makefile  cpupower.c  cpupower.h  frequency.c  frequency.h
src/daemon/: .depend  .dynamic_configuration.c.swp  .eard_conf_rapi.h.swp  .eard_rapi.c.swp  .eard_rapi.h.swp  .gitignore  .pc_dvfs.h.swp  .power_monitor.c.swp  .shared_configuration.h.swp  Makefile  README.md  app_mgt.c  app_mgt.h  app_server_api.c  dyn_conf_theading.c  dyn_conf_theading.h  dynamic_configuration.c  ear_arch_type.h  (+61 more)
tests/: .gitignore  Makefile  README.md
tmp/: MPI_OpenMP_bind.sh  Makefile.in  coefficients_tools.c  compute_coefficients.c  compute_coefficients_old.c  compute_projections_from_csv.c  compute_projections_from_csv_avx512.c  database_eraser.c  dummy.h  dynais_graph.c  ear_frequency.c  ear_frequency.h  ear_node_energy.c  ear_node_energy.h  ear_rapl_metrics.txt  ear_turbo_metrics.c  ibmaem.h  m.c  m.h  projections.h  show_metrics.c  simd_power_metrics_2.c  simd_power_metrics_sse.c  simd_test_with_ear.c  slurm_plugin.c  tmp_mar_2018.tar
(+1322 files in other folders)
